--- a/TIM_TU/ubah_ruang.html
+++ b/TIM_TU/ubah_ruang.html
@@ -121,31 +121,12 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     
-					<li>
-                        <a href="inputschedulecalendar.html"></i> Input Schedule</a>
+                    <li >
+                        <a href="main_tu.html"></i>Final Project Schedule</i></a>
                     </li>
-                    <li>
-                        <a href="indexdosendaftar.html"></i> Input Lecturers</a>
+                    <li class="active">
+                        <a href="ubah_ruang.html"></i>Presentation Room setting</a>
                     </li>
-                    <li>
-                        <a href="indexdosenformpembimbing.html"></i> List of Supervisors</a>
-                    </li>
-                    <li>
-                        <a href="indexdosenformpenguji.html"></i> List of Examiners</a>
-                    </li>
-                    <li>
-                        <a href="indexmahasiswadaftar.html"></i> Input Students</a>
-                    </li>
-                    <li>
-                        <a href="indexmahasiswaform.html"></i> List of Students</a>
-                    </li>
-                    <li  class="active">
-                        <a href="ubah_ruang.html"></i> Presentation Room Setting</a>
-                    </li>
-                    <li>
-                        <a href="ubah1.html"></i> Schedule Setting</a>
-                    </li>
-					
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
